fixed burger menu not showing in smaller screens

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -14,20 +14,27 @@
     }
 
     
-    .navBar ul {
-        display: flex;
-        margin: 0;
+    .navBar {
+            ul {
+                
+            display: flex;
+            margin: 0;
 
-        a:hover, a:focus,
-        i:hover, i:focus  {
-            color: #539908;
+                a:hover, a:focus,
+                i:hover, i:focus  {
+                    color: #539908;
+                    
+                }
+
+                a:visited, 
+                i:visited {
+                    text-decoration: none;
+                }
+
+                .burger {
+                    display: none;
+                }
             
-        }
-
-        a:visited, 
-        i:visited {
-            text-decoration: none;
-          
         }
     }
     
@@ -35,6 +42,7 @@
         color: #539908;
         
     }
+
     
 }
 
